# Drone_Detector

./: .~lock.TestTask - Veidelmarov Technologies.docx#  README.md  main.py  pyproject.toml
src/: detection.py  utils.py
