[project]
name = "drones"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleg",email = "oleg.lanovoy@tomalearn.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "huggingface-hub (>=1.1.4,<2.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ultralytics (>=8.3.229,<9.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
